# training_algorithms

./: Adaline_Tests_Visualizer.ipynb  CMakeLists.txt  Perceptron_Tests_Visualizer.ipynb  Pocket_Tests_Visualizer.ipynb  README.md  Regression_Tests_Visualize.ipynb  Tests_Visualizer.ipynb  conanfile.txt
.ipynb_checkpoints/: LinearRegression_Tests_Visualize-checkpoint.ipynb  Pocket_Tests_Visualizer-checkpoint.ipynb  Regression_Tests_Visualize-checkpoint.ipynb  Tests_Visualizer-checkpoint.ipynb
datasets/: multi_dimensional_regression_data.csv  simple_logistic_noisy_data.csv  simple_noisy_data.csv  simple_non_noisy_data.csv
src/: CMakeLists.txt  main.cpp
src/adaline/: Adaline.cpp  Adaline.h  CMakeLists.txt
src/dataset/: CMakeLists.txt  DataSet.cpp  DataSet.h
src/linear_regression/: CMakeLists.txt  LinearRegression.cpp  LinearRegression.h
src/logistic_regression/: CMakeLists.txt  LogisticRegression.cpp  LogisticRegression.h
src/math/: CMakeLists.txt  Math.cpp  Math.h
src/metrics/: CMakeLists.txt  Metrics.cpp  Metrics.h
src/neuron/: CMakeLists.txt  Neuron.cpp  Neuron.h
src/perceptron/: CMakeLists.txt  Perceptron.cpp  Perceptron.h  perceptron.cpp  perceptron.h
test/: CMakeLists.txt  adaline.cpp  adaline.h  helpers.cpp  helpers.h  learning_test.cpp  linear_regression.cpp  linear_regression.h  logistic_regression.cpp  logistic_regression.h  perceptron.cpp  perceptron.h  pla.cpp  pla.h  pocket.cpp  pocket.h  regression.cpp  regression.h
tests_notebooks/: Adaline_Tests_Visualizer.ipynb  Perceptron_Tests_Visualizer.ipynb  Regression_Tests_Visualize.ipynb
(+12 files in other folders)
